Deleted separate sprites with quality, and replaced them with overlapping star sprites.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 <div id="farm_page" class="page">
 
 <div class="farm_section" id="corn_section">
-<img src="Content/corn_plant.png" style="width: 75px"> <wrap>X</wrap> <wrap id="corn_plant_n">0</wrap> <img src="Content/corn.png" style="padding-left: 200px; width: 75px"> <wrap>X</wrap> <wrap id="corn_n">0</wrap> <img src="Content/corn_med.png" style="padding-left: 100px; width: 75px"> <wrap>X</wrap> <wrap id="corn_med">0</wrap> <img src="Content/corn_high.png" style="padding-left: 100px; width: 75px"> <wrap>X</wrap> <wrap id="corn_high">0</wrap>
+<img src="Content/corn_plant.png"> <wrap>X</wrap> <wrap id="corn_plant_n">0</wrap>		<img src="Content/corn.png" style="padding-left: 200px;"> <wrap>X</wrap> <wrap id="corn_n">0</wrap>		<div class="star_img"> <div class="star"><img src="Content/star_med.png"></div> <div><img src="Content/corn.png"></div> </div> <wrap>X</wrap> <wrap id="corn_med">0</wrap>		<div class="star_img"><div class="star"><img src="Content/star_high.png"></div><img src="Content/corn.png"></div> <wrap>X</wrap> <wrap id="corn_high">0</wrap>
 </div>
 
 <div class="farm_section" id="tomato_section">
-<img src="Content/tomato_plant.png" style="width: 75px"> <wrap>X</wrap> <wrap id="tomato_plant_n">0</wrap> <img src="Content/tomato.png" style="padding-left: 200px; width: 75px"> <wrap>X</wrap> <wrap id="tomato_n">0</wrap> <img src="Content/tomato_med.png" style="padding-left: 100px; width: 75px"> <wrap>X</wrap> <wrap id="tomato_med">0</wrap> <img src="Content/tomato_high.png" style="padding-left: 100px; width: 75px"> <wrap>X</wrap> <wrap id="tomato_high">0</wrap>
+<img src="Content/tomato_plant.png"> <wrap>X</wrap> <wrap id="tomato_plant_n">0</wrap>		<img src="Content/tomato.png" style="padding-left: 200px;"> <wrap>X</wrap> <wrap id="tomato_n">0</wrap>		<div class="star_img"> <div class="star"><img src="Content/star_med.png"></div> <div><img src="Content/tomato.png"></div> </div> <wrap>X</wrap> <wrap id="tomato_med">0</wrap>		<div class="star_img"><div class="star"><img src="Content/star_high.png"></div><img src="Content/tomato.png"></div> <wrap>X</wrap> <wrap id="tomato_high">0</wrap>
+
 </div>
 
 </div>
