--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
 <div class="navigation" id="nav">
 <button id="farm_button" class="nav_button_active" onclick="switch_place('farm')">Farm</button>
 <button class="nav_button" style="display: none;">Dungeon</button>  
@@ -94,7 +95,7 @@
 <span id="tomato_inv" onclick="plant('tomato')" style="font-size: 13px; display: none;"> <wrap>Tomato - seeds: </wrap> <wrap id="tomato_seeds_n">0</wrap> <wrap>, crops: </wrap> <wrap id="tomato_n2">0</wrap> <br><br></span>
 </div>
 
-<div style="clear: both; width: 84%;">
+<div id="footer">
 <a href="about.html" target="_blank">About</a>
 </div>
 
